[package]
name = "actor_core"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.19"
serde = "1.0.216"
serde_derive = "1.0.216"
chrono = "0.4.39"
#slog = "2.7.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
log = { version = "0.4.22", features = ["kv", "kv_serde"] }
flexi_logger = "0.29.7"
syslog = "7.0.0"
lazy_static = "1.5.0"
rand = "0.8.5"
clap = { version = "4.5.23", features = ["derive"] }
#rusqlite = { version = "0.32.1", features = ["bundled"] }
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "chrono", "derive"] }
rust-embed = { version = "8.5.0", features = ["debug-embed"] }
sha256 = "1.5.0"